make controller(routes) employee and define in app file for calling routes

--- a/views/Employee.ejs
+++ b/views/Employee.ejs
@@ -21,7 +21,8 @@
             </td>
         </tr>
         <tr>
-            <td><input type="number" name="salary" ></td>
+            <td>Employee Salary:</td>
+            <td><input type="text" name="salary" ></td>
         </tr>
     </table>
     <br/>
